fix(tui): simplify memory lint slash command